# LogicMate-Backend

./: .gitignore  docker-compose.yml  pyproject.toml
src/logicmate_backend/: main.py
src/logicmate_backend/config/: database.py
src/logicmate_backend/controllers/: video_controller.py  video_main_controller.py  video_studio_controller.py
src/logicmate_backend/dto/video/: video_create_dto.py
src/logicmate_backend/models/: __init__.py  image_model.py  scene_model.py  video_model.py
src/logicmate_backend/repositories/: video_respository.py
src/logicmate_backend/services/: video_service.py
