[project]
name = "logicmate-backend"
version = "1.0.0"
description = "Interactive Assistance Bot Backend Server on Algorithm Programs and Programming Flowcharts for the course “Introduction to Algorithmics”"
authors = [
    {name = "NightmareVCO",email = "vladimircuriel@outlook.com"}
]
readme = "README.md"
requires-python = "==3.10.17"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "ruff (>=0.11.10,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  { include = "logicmate_backend", from = "src" }
]